--- a/inkbit/public/landing/index.html
+++ b/inkbit/public/landing/index.html
@@ -10,9 +10,13 @@
       <header>
         <nav>
             <h1>Inkbit</h1>
-            <h2>Collect what you Geek in for</h2>
+           
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="/landing/index.html">Home</a></li>]
+                <li><a href="/landing/mylibrary.html">My Library</a></li>
+                <li><a href="/landing/collection.html">My Collection</a></li>
+                <li><a href="#"></a>My Achievements</li>
+                <li><a href=""></a>Explore</li>
                 <li><a href="/admin/index.html">Admin</a></li>
                 <li><a href="/index.html">Login</a></li>
             </ul>
@@ -20,8 +24,9 @@
     </header>
      <main>
         <section class="hero">
-            <h2>Welcome to My Web App</h2>
-            <p>This is a simple web application using Node.js, Express, and MongoDB.</p>
+            <h2>Welcome to InkBit</h2>
+             <img src="webimage.jpg" alt="Inkbit Logo" class="logo">
+            <p>Collect all your favorite series in one place.</p>
             <a href="/login.html" class="btn">Get Started</a>
         </section>
 
